fix roster overflow in 1col

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -554,6 +554,9 @@ $hover-bg: $m-primary_bg--mix-30;
     &__matches__header {
       @extend %tour-margin-horiz;
     }
+    &__roster {
+      overflow: auto;
+    }
     &__header {
       &__stats {
         @extend %tour-margin-horiz;
